added witch content and images

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </nav>
         </header>
         <div>   
-            <img class="img-hero" src="images/wizard of oz.jpeg" alt="the Wizard of Oz">
+            <img class="img-hero" src="images/wizard-of-oz.jpg" alt="the Wizard of Oz">
         </div>
         <div class="flex-container"> <!--- main content area -->
             <main>
